[metadata]
name = nistauthenticator
version = 0.1.0
license = https://mit-license.org/
license_file = LICENSE
description = A HTTP header based authenticator for JupyterHub
long_description = file: README.md
keywords = JupyterHub, HTTP header, Authenticator
author = Yunlan Li
author_email = yl4387@columbia.edu
url = https://github.com/yunlanli/nistauthenticator

[options]
packages = find:
include_package_data = True
python_requires = >= 3.6
install_requires =
    jupyterhub
